@@ -196,7 +196,9 @@ public class Authenticate extends StdWebMacro
 		{
 			String password = getPassword(httpReq);
 			mob=CMLib.players().getLoadPlayer(login);
-			if((mob==null)||(mob.playerStats()==null))
+			if((mob==null)
+			||(mob.playerStats()==null)
+			||((CMProps.getIntVar(CMProps.Int.COMMONACCOUNTSYSTEM)>0) && (mob.playerStats().getAccount()==null)))
 			{
 				if(CMProps.getIntVar(CMProps.Int.COMMONACCOUNTSYSTEM)>0)
 				{
