@@ -1,4 +1,6 @@
 package com.planet_ink.coffee_mud.WebMacros;
+
+import com.planet_ink.miniweb.interfaces.*;
 import com.planet_ink.coffee_mud.core.interfaces.*;
 import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.collections.*;
@@ -13,11 +15,10 @@ import com.planet_ink.coffee_mud.Items.interfaces.*;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
-import com.planet_ink.miniweb.interfaces.*;
 import java.util.*;
 
 /* 
-   Copyright 2000-2013 Bo Zimmerman
+   Copyright 2006-2013 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -31,46 +32,14 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-@SuppressWarnings("rawtypes")
-public class AccountPlayerNext extends StdWebMacro
+public class IsDisabled extends StdWebMacro
 {
-	public String name() { return "AccountPlayerNext"; }
+	public String name() { return "IsDisabled"; }
 
 	public String runMacro(HTTPRequest httpReq, String parm)
 	{
-		if(!CMProps.getBoolVar(CMProps.Bool.MUDSTARTED))
-			return CMProps.getVar(CMProps.Str.MUDSTATUS);
-
-		java.util.Map<String,String> parms=parseParms(parm);
-		String last=httpReq.getUrlParameter("PLAYER");
-		if(parms.containsKey("RESET"))
-		{	
-			if(last!=null) httpReq.removeUrlParameter("PLAYER");
-			return "";
-		}
-		String accountName=httpReq.getUrlParameter("ACCOUNT");
-		if(accountName==null) return " @break@";
-		PlayerAccount account=CMLib.players().getLoadAccount(accountName);
-		if(account==null) return "";
-		
-		String lastID="";
-		String sort=httpReq.getUrlParameter("SORTBY");
-		if(sort==null) sort="";
-		Enumeration pe=account.getThinPlayers();
-		for(;pe.hasMoreElements();)
-		{
-			PlayerLibrary.ThinPlayer user=(PlayerLibrary.ThinPlayer)pe.nextElement();
-			if((last==null)||((last.length()>0)&&(last.equals(lastID))&&(!user.name.equals(lastID))))
-			{
-				httpReq.addFakeUrlParameter("PLAYER",user.name);
-				return "";
-			}
-			lastID=user.name;
-		}
-		httpReq.addFakeUrlParameter("PLAYER","");
-		if(parms.containsKey("EMPTYOK"))
-			return "<!--EMPTY-->";
-		return " @break@";
+		CMSecurity.DisFlag flag=(CMSecurity.DisFlag)CMath.s_valueOf(CMSecurity.DisFlag.class, parm.toUpperCase().trim());
+		if(flag==null) return " @break@";
+		return Boolean.toString(CMSecurity.isDisabled(flag));
 	}
-
 }
