@@ -5,6 +5,8 @@
    4. Races now designate what sort of resource they can breathe, which means GenRaces have a new field you can edit.
    5. New Archon command: JCONSOLE, for playing around with javascript commands (and accessing your muds running systems!!)
    6. New Forum features: All Forums Search, and better threading for all searches.
+   7. Can now disable CharStats (attribute) display
+   8. New WebMacro: IsDisabled
 //TODO: add electronics to guides
 //TODO: add electronics to MG
 //TODO: http://games.groups.yahoo.com/group/coffeemud skip=1885,2881,2953,3274,15908,15914,16267
